# unity

./: .gitignore  Nano_Control_Client.py  README.md  abb_test.py  client_log_2026-04-15_16-45-10.txt  nano_client_config.example.json  pyproject.toml  requirements_64.txt
examples/: README.md  dummy_ot2_protocol.py  example_combined.py  example_custom_experiment.py  example_lumidox.py  example_ot2_only.py  example_plate_reader_only.py
project_unity/: __init__.py  __main__.py
project_unity/communication/: __init__.py  ot2_ssh.py  socket_client.py
project_unity/config/: __init__.py  settings.py
project_unity/experiments/: __init__.py  base.py  combined.py  lumidox_illumination.py  metadata.py  ot2_protocol.py  plate_reader_measurement.py
project_unity/instruments/: __init__.py  base.py  lumidox.py  ot2.py  plate_reader.py
project_unity/utils/: __init__.py  data_processing.py  file_io.py  logging.py  user_input.py
